--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -62,11 +62,11 @@
                     <MSpacer />
                     @if (_isEditBiz)
                     {
-                        <MButton Class="mr-4" StopPropagation Icon OnClick="CancelEditBizName">
+                        <SButton Class="mr-4" StopPropagation Icon OnClick="CancelEditBizName">
                             <SIcon Tooltip="@T("Cancel")" Color="#323D6F">mdi-close-thick</SIcon>
-                        </MButton>
+                        </SButton>
                     }
-                    <MButton Icon OnClick="UpdateBizAsync" StopPropagation>
+                    <SButton Icon OnClick="UpdateBizAsync" StopPropagation>
                         @if (!_isEditBiz)
                         {
                             <MIcon Color="#323D6F" Size="20">mdi-pencil</MIcon>
@@ -75,7 +75,7 @@
                         {
                             <MIcon Color="success">mdi-check</MIcon>
                         }
-                    </MButton>
+                    </SButton>
                 </MCardTitle>
                 <div class="regular3--text pl-4 body2 text-overflow">@_bizDetail.Identity</div>
                 <MCardActions Class="pa-0 mx-3" Style="position: absolute; bottom: 16px; right: 0; left: 0;">
@@ -98,11 +98,7 @@
                     <div class="emphasis2--text h6 mt-1">@T("App")</div>
                 </MCol>
                 <MCol Lg="4" Md="4" Sm="6">
-                    <MTextField @bind-Value="_appName" OnKeyDown="SearchApp" Style="width:100%" Class="rounded-2" Height="40" Flat Dense Solo HideDetails="@("auto")" Placeholder="@T("Please enter the app name and press enter to query")">
-                        <PrependInnerContent>
-                            <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
-                        </PrependInnerContent>
-                    </MTextField>
+                    <SSearch @bind-Value="_appName" OnEnter="SearchApp" Height="40" Dense BackgroundColor="#fff" MaxWidth="0" Placeholder="@T("Please enter the app name and press enter to query")" />
                 </MCol>
             </MRow>
             <div class="mt-6" style="width:100%; height: calc(100vh - 497px);overflow-y:auto; overflow-x:hidden; position:relative;">
