--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -39,21 +39,21 @@
     {
         if (!ConfigObject.FromRelation)
         {
-            <MButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="UpdateConfig">
+            <SButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="UpdateConfig">
                 <SIcon Tooltip="@(T("Add config item"))" Color="#323D6F">mdi-plus-circle</SIcon>
-            </MButton>
+            </SButton>
         }
     }
     else
     {
         if (ConfigObject.IsEditing)
         {
-            <MButton Class="mr-4" StopPropagation Icon OnClick="CancelEditConfig">
+            <SButton Class="mr-4" StopPropagation Icon OnClick="CancelEditConfig">
                 <SIcon Tooltip="@T("Cancel")" Color="#323D6F">mdi-close-thick</SIcon>
-            </MButton>
+            </SButton>
         }
 
-        <MButton StopPropagation Icon Class="mr-4" OnClick="UpdateConfig">
+        <SButton StopPropagation Icon Class="mr-4" OnClick="UpdateConfig">
             @if (!ConfigObject.IsEditing)
             {
                 var relation = ConfigObject.RelationConfigObjectId != 0;
@@ -63,22 +63,22 @@
             {
                 <SIcon Tooltip="@(T("Save"))" Color="success">mdi-check</SIcon>
             }
-        </MButton>
+        </SButton>
     }
     @if (ConfigObjectType != ConfigObjectType.Public && ConfigObject.FromRelation == false)
     {
-        <MButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="CloneConfig">
+        <SButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="CloneConfig">
             <SIcon Tooltip="@T("Clone")" Size="20" Color="#323D6F">fas fa-copy</SIcon>
-        </MButton>
+        </SButton>
     }
-    <MButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="ReleaseConfig">
+    <SButton Disabled="DisabledButton" StopPropagation Icon Class="mr-4" OnClick="ReleaseConfig">
         <SIcon Tooltip="@T("Release")" Color="#323D6F">mdi-send</SIcon>
-    </MButton>
+    </SButton>
     <MMenu OffsetY>
         <ActivatorContent>
-            <MButton Disabled="DisabledButton" @attributes="@context.Attrs" StopPropagation Icon Class="mr-4">
+            <SButton Disabled="DisabledButton" @attributes="@context.Attrs" StopPropagation Icon Class="mr-4">
                 <MIcon Color="#323D6F">mdi-dots-vertical</MIcon>
-            </MButton>
+            </SButton>
         </ActivatorContent>
         <ChildContent>
             <MList>
