fix-issues-492:update MIcon to SIcon

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
@@ -6,7 +6,7 @@
             <div class="emphasis2--text h7 text-overflow">@App.Type</div>
             <MSpacer />
             <SButton StopPropagation Icon OnClick="OnPinClick">
-                <MIcon Color="@(IsPin ? "#FFB547" : "#E5E5E5")" Size="20">mdi-pin</MIcon>
+                <SIcon Color="@(IsPin ? "#FFB547" : "#E5E5E5")" Size="20">mdi-pin</SIcon>
             </SButton>
             </MCardTitle>
             <MCardSubtitle>
