--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -69,11 +69,11 @@
                     <SButton Icon OnClick="UpdateBizAsync" StopPropagation>
                         @if (!_isEditBiz)
                         {
-                            <MIcon Color="#323D6F" Size="20">mdi-pencil</MIcon>
+                            <SIcon Color="#323D6F" Size="20">mdi-pencil</SIcon>
                         }
                         else
                         {
-                            <MIcon Color="success">mdi-check</MIcon>
+                            <SIcon Color="success">mdi-check</SIcon>
                         }
                     </SButton>
                 </MCardTitle>
