--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ProjectList.razor
@@ -49,9 +49,9 @@
                             </span>
                         </ChildContent>
                         <ActionsContent>
-                            <MIcon Color="#485585">
+                            <SIcon Color="#485585">
                                 mdi-chevron-down
-                            </MIcon>
+                            </SIcon>
                         </ActionsContent>
                     </MExpansionPanelHeader>
                     <MExpansionPanelContent>
@@ -103,7 +103,7 @@
                                     var mClass = $"{(context.Hover ? "primary--text" : "regular2--text")}";
                                     <div @onclick="()=>HandleProjectNameClick(project.Id)" @attributes="context.Attrs" class="@($"hover-pointer btn {mClass}")">
                                         @T("More")
-                                        <MIcon Class="@($"ml-1 {mClass}")" Size="18">mdi-chevron-right</MIcon>
+                                        <SIcon Class="@($"ml-1 {mClass}")" Size="18">mdi-chevron-right</SIcon>
                                     </div>
                                 }
                             </MHover>
